Add "all" to viewresolver

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
   	"lodash": "*",
   	"handlebars": "*",
-    "broadway": "*"
+    "broadway": "*",
+    "walk": "*"
 	},
   "devDependencies": {
     "optimist": "*"
