Added more powerful each helper to handlebars

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   	"lodash": "*",
   	"handlebars": "*",
     "broadway": "*",
-    "findit": "*"
+    "findit": "*",
+    "async": "*"
 	},
   "devDependencies": {
     "optimist": "*"
