--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broadway-handlebars",
-   "version": "0.1.5",
+   "version": "0.1.6",
    "main": "index",
    "description": "Plugin for flatiron/broadway for rendering with the handlebars view engine.",
    "keywords": [
@@ -28,7 +28,7 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "node /tests/example.js"
+    "test": "node tests/example.js"
   },
   "dependencies": {
   	"lodash": "*",
