--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broadway-handlebars",
-   "version": "0.2.0",
+   "version": "0.2.1",
    "main": "index",
    "description": "Plugin for flatiron/broadway for rendering with the handlebars view engine.",
    "keywords": [
@@ -32,7 +32,7 @@
   },
   "dependencies": {
   	"lodash": "1.0.1",
-  	"handlebars": "1.0.x",
+  	"handlebars": "~1.0.11",
     "broadway": "0.2.6",
     "findit": "0.1.2",
     "async": "0.2.5"
