--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "test": "node tests/unit.js"
   },
   "dependencies": {
-  	"lodash": "1.0.1",
+  	"lodash": "1.3.x",
   	"handlebars": "~1.0.11",
-    "broadway": "0.2.6",
     "findit": "0.1.2",
-    "async": "0.2.5"
+    "async": "0.2.6"
 	},
   "devDependencies": {
-    "tap": "*"
-    },
+    "tap": "*",
+    "broadway": "0.2.7"
+},
   "optionalDependencies": {},
   "homepage": "http://vastdevblog.vast.com/"
 }
