--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "test": "node tests/unit.js"
   },
   "dependencies": {
-    "lodash": "1.3.x",
-    "handlebars": "~1.0.11",
+    "lodash": "~2.2.0",
+    "handlebars": "~1.0.12",
     "findit": "0.1.2",
-    "async": "0.2.6"
+    "async": "0.2.9"
   },
   "devDependencies": {
     "tap": "*",
