--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "test": "node tests/unit.js",
     "postinstall": "lodash include=each,defaults,extend,clone,range,map exports=node",
-    "preinstall": "npm install lodash-cli -g"
+    "preinstall": "npm install lodash-cli"
   },
   "dependencies": {
     "handlebars": "~1.0.12",
