--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "node tests/unit.js",
-    "postinstall": "lodash include=each,defaults,extend,clone,range,map exports=node && rm -rf node_modules/lodash-cli",
-    "preinstall": "npm install lodash-cli"
+    "test": "node tests/unit.js"
   },
   "dependencies": {
     "handlebars": "~1.0.12",
     "findit": "0.1.2",
-    "async": "0.2.9"
+    "async": "0.2.9",
+    "lodash": "~2.2.0"
   },
   "devDependencies": {
     "tap": "*",
