--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lodash": "~2.2.0"
   },
   "devDependencies": {
-    "tap": "*",
+    "tap": "~0.4.4",
     "broadway": "0.2.7"
   },
   "optionalDependencies": {},
