--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "render"
   ],
   "author": {
-    "name": "Vast",
-    "email": "",
-    "web": "http://vastdevblog.vast.com/"
+    "name": "Tommy Messbauer",
+    "email": "tom.messbauer@gmail.com"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:vast-eng/broadway-handlebars.git"
+    "url": "git@github.com:tommymessbauer/broadway-handlebars.git"
   },
   "directories": {
     "tests": "tests"
@@ -34,12 +33,11 @@
     "handlebars": "~1.0.12",
     "findit": "0.1.2",
     "async": "0.2.9",
-    "lodash": "~2.2.0"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "tap": "~0.4.4",
     "broadway": "0.2.7"
   },
-  "optionalDependencies": {},
-  "homepage": "http://vastdevblog.vast.com/"
+  "optionalDependencies": {}
 }
