--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "test": "node tests/unit.js"
   },
   "dependencies": {
-    "findit": "0.1.2",
     "async": "0.2.9",
+    "findit": "0.1.2",
+    "handlebars": "~1.3.0",
     "lodash": "~2.4.1",
-    "handlebars": "~1.3.0"
+    "minimize": "^1.4.1"
   },
   "devDependencies": {
     "tap": "~0.4.4",
